# lucia.audio

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
dashboard/: app.py
dashboard/static/: app.js  style.css
dashboard/templates/: index.html
voices/: .gitkeep
wyoming_chatterbox/: __init__.py  __main__.py  benchmark.py  engine_manager.py  handler.py  qwen3_engine.py  streaming.py  tts_engine.py  voice_manager.py
