[project]
name = "wyoming-chatterbox"
version = "1.0.0"
description = "Wyoming protocol TTS service using Resemble AI Chatterbox Turbo"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "wyoming>=1.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
]

[project.scripts]
wyoming-chatterbox = "wyoming_chatterbox.__main__:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wyoming_chatterbox*", "dashboard*"]

[tool.setuptools.package-data]
dashboard = ["templates/*.html", "static/*.css", "static/*.js"]
